# djgpt

./: .gitignore  CROSS_PLATFORM.md  LICENSE  Makefile  README.rst  cli.py  cross_platform_speech.py  environment.yml  keyboard_speech.py  pixi.toml  prompt.py  pyproject.toml  simple_speech.py  speech.py  spotify.py  stts.py  utils.py
.github/workflows/: ci.yml
docs/: ci.md
src/djgpt/: __init__.py  __main__.py  cli.py  prompt.py  speech.py  spotify.py  utils.py
tests/: conftest.py  mocks.py  test_ci.py  test_speech.py  test_spotify.py  test_utils.py
